objects/Case.object
<CustomObject>
    <fields>
        <fullName>EV_Code_Signing_Audit_Type__c</fullName>
        <label>EV Code Signing Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WebTrust</fullName>
                </value>
                <value>
                    <fullName>ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>ETSI TS 102 042</fullName>
                </value>
                <value>
                    <fullName>Equivalent WebTrust</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI 102 042</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Deviation_Comments__c</fullName>
        <label>EV Code Signing Audit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Issues or qualifications noted in audit statement</description>
        <inlineHelpText>Issues or qualifications noted in audit statement</inlineHelpText>
        <label>EV Code Signing Audit Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Verified__c</fullName>
        <inlineHelpText>Root Store Manager to verify data fields in EV Code Signing Audit section</inlineHelpText>
        <label>EV Code Signing Audit Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_ALV_Comments__c</fullName>
        <inlineHelpText>Explanation about why audit accepted when ALV status is FAIL </inlineHelpText>
        <label>EV SSL Audit ALV Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Authenticity_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only when authenticity of audit statement has been confirmed </inlineHelpText>
        <label>EV SSL Audit Authenticity Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Auto_Review_Results__c</fullName>
        <inlineHelpText>Results returned by ALV service</inlineHelpText>
        <label>EV SSL Audit ALV Results</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Auto_Review_Status__c</fullName>
        <inlineHelpText>Status returned by ALV service</inlineHelpText>
        <label>EV SSL Audit ALV Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Gap_For_All_Root_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rollup field for all Root Cases related to the Case (updated by trigger)</inlineHelpText>
        <label>EV SSL Audit Gap For All Root Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Seal_ID__c</fullName>
        <inlineHelpText>Store Seal ID to map the Report ID in CPACanada Files object</inlineHelpText>
        <label>EV SSL Audit Seal ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Deviation_Comments__c</fullName>
        <label>EV SSL Audit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Issues or qualifications noted in audit statement</description>
        <inlineHelpText>Issues or qualifications noted in audit statement</inlineHelpText>
        <label>EV SSL Audit Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forbidden_Practices_Verified__c</fullName>
        <label>Forbidden Practices Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forbidden_Practices__c</fullName>
        <defaultValue>&apos;https://wiki.mozilla.org/CA/Forbidden_or_Problematic_Practices&apos;</defaultValue>
        <label>Forbidden Practices</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Geographic_Focus__c</fullName>
        <defaultValue>&quot;NEED: Country or geographic region where CA typically sells certs.&quot;</defaultValue>
        <label>Geographic Focus</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>I_Acknowledge_4__c</fullName>
        <label>Acknowledge Acceptance Not Guaranteed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I acknowledge that this application does not guarantee acceptance into Microsoft&apos;s Trusted Root Program.</fullName>
                </value>
                <value>
                    <fullName>Not Acknowledged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_Acknowledge_5__c</fullName>
        <inlineHelpText>I acknowledge that if this application is approved, we will need to engage in a formal contract with Microsoft before root certificates are included in Microsoft&apos;s TRP.</inlineHelpText>
        <label>Acknowledge Need For Formal Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I acknowledge that if this application is approved, we will need to engage in a formal contract with Microsoft before root certificates are included in Microsoft&apos;s TRP.</fullName>
                </value>
                <value>
                    <fullName>Not Acknowledged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_Certify_1__c</fullName>
        <inlineHelpText>I certify that I have read and will adhere to Microsoft Trusted Root Program Requirements.</inlineHelpText>
        <label>MSFT Trusted Root Program Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I certify that I have read and will adhere to Microsoft Trusted Root Program Requirements.</fullName>
                </value>
                <value>
                    <fullName>Not Certified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_Certify_2_Text__c</fullName>
        <inlineHelpText>I certify that to the best of my knowledge all audits conform to Microsoft requirements as per https://aka.ms/auditreqs</inlineHelpText>
        <label>Audits Conform to MSFT&apos;s Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I certify that to the best of my knowledge all audits conform to Microsoft requirements as per https://aka.ms/auditreqs</fullName>
                </value>
                <value>
                    <fullName>Not Certified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_Certify_3_Text__c</fullName>
        <inlineHelpText>I certify that all answers are true and complete to the best of my knowledge.</inlineHelpText>
        <label>Answers are True and Complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I certify that all answers are true and complete to the best of my knowledge.</fullName>
                </value>
                <value>
                    <fullName>Not Certified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;1. Fill in the Auditor, Audit, CP/CPS Information sections then click on Submit.&quot; + BR() +
&quot;2. Click on the &apos;Add/Update Root Cases&apos; button to indicate which root certificates are covered in the audit statements.&quot; + BR() +
&quot;3. Click on ‘Edit Test Websites&apos; button to enter details of Test Websites.&quot; + BR() +
&quot;4. Click on the ‘Audit Letter Validation (ALV)’ button and resolve any issues.&quot; + BR() + BR() +
&quot;Note: You may click on the &apos;Edit&apos; and &apos;Submit&apos; buttons as many times as you need to save your changes.&quot;</defaultValue>
        <label>Instructions</label>
        <length>720</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Comments_on_Case__c</fullName>
        <label>Comments by Mozilla on Case</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date_Time__c</fullName>
        <inlineHelpText>Updated by Sync process</inlineHelpText>
        <label>Last Sync Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Case_Comment__c</fullName>
        <description>Update by workflow and field update</description>
        <label>Latest Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Bugzilla_Bug__c</fullName>
        <inlineHelpText>Link to Bugzilla case request</inlineHelpText>
        <label>Link to Bugzilla Bug</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Microsoft_Contract_Type__c</fullName>
        <label>Microsoft Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microsoft_Request_Status__c</fullName>
        <label>Microsoft Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microsoft_Status_CA_Owner__c</fullName>
        <formula>Account.Microsoft_Status_In_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CA Owner&apos;s Microsoft Status</inlineHelpText>
        <label>Microsoft Status (CA Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsoft_Status_Root_Certs__c</fullName>
        <inlineHelpText>Rollup Microsoft Status of all Root Certs from Root Cases. If Status is &quot;Included&quot; or &quot;Change Requested&quot; then Case record shows &quot;Included&quot; else &quot;Not Yet Included&quot;.</inlineHelpText>
        <label>Microsoft Status (Root Certs)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsoft_Status__c</fullName>
        <label>Microsoft Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Included</fullName>
                    <default>true</default>
                    <label>Not Included</label>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>NotBefore</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mozilla_Status_CA_Owner__c</fullName>
        <formula>Account.Status_In_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CA Owner&apos;s Mozilla Status</inlineHelpText>
        <label>Mozilla Status (CA Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mozilla_Status_Root_Certs__c</fullName>
        <inlineHelpText>Rollup Mozilla Status of all Root Certs from Root Cases. If Status is &quot;Included&quot; or &quot;Change Requested&quot; then Case record shows &quot;Included&quot; else &quot;Not Yet Included&quot;.</inlineHelpText>
        <label>Mozilla Status (Root Certs)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mozilla_Status__c</fullName>
        <label>Mozilla Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Included</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Provided by CA</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Contact_Department__c</fullName>
        <inlineHelpText>Department of the new POC.</inlineHelpText>
        <label>FUTURE New Contact Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contact_Email__c</fullName>
        <inlineHelpText>A direct E-mail address of the new contact.</inlineHelpText>
        <label>FUTURE New Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Contact_Name__c</fullName>
        <inlineHelpText>Name of a new contact filling the role of Primary POC or POC.</inlineHelpText>
        <label>FUTURE New Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Contact_Phone__c</fullName>
        <label>FUTURE New Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Contact_Title__c</fullName>
        <inlineHelpText>Title of the new POC.</inlineHelpText>
        <label>FUTURE New Contact Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contact_Type__c</fullName>
        <inlineHelpText>The role of new POC.</inlineHelpText>
        <label>FUTURE New Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary POC</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                </value>
                <value>
                    <fullName>Auditor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <defaultValue>&quot;All applicants must conform to standards outlined in https://aka.ms/auditreqs. Commercial applicants must be audited by an accredited public auditor and issue certificates to the public as line of business. Government applicants do not issue certificates to the public. Government roots are technically constrained to &apos;non-commercial&apos; gTLD associated with their ccTLD. A government CA can use Internal auditors in lieu of public auditors for their annual audits. Additional information can be found at https://aka.ms/rootcertapply.&quot;</defaultValue>
        <label>Note</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organizational_Type__c</fullName>
        <inlineHelpText>Indicate the type of organization operating this CA.</inlineHelpText>
        <label>Organizational Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Corporation</fullName>
                </value>
                <value>
                    <fullName>Public Corporation</fullName>
                </value>
                <value>
                    <fullName>Government Agency</fullName>
                </value>
                <value>
                    <fullName>Non-Profit Organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Relevant_Documents__c</fullName>
        <label>Other Relevant Documents</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Documentation__c</fullName>
        <description>Further documentation or information relevant to the listed root certs.</description>
        <inlineHelpText>Further documentation or information relevant to the listed root certs.</inlineHelpText>
        <label>Policy Documentation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Market_Customer_Base__c</fullName>
        <defaultValue>&quot;NEED:&quot; + BR() + 
&quot;- Which types of customers does the CA serve? &quot; + BR() + 
&quot;- Are there particular vertical market segments in which it operates? &quot; + BR() + 
&quot;- Does the CA focus its activities on a particular country or other geographic region?&quot;</defaultValue>
        <inlineHelpText>Which types of customers does the CA serve?
Are there particular vertical market segments in which it operates?
Does the CA focus its activities on a particular country or other geographic region?</inlineHelpText>
        <label>Primary  Market / Customer Base</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Reporting_Mechanism__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: An email address (that the CA closely monitors) for reporting suspected Private Key Compromise, Certificate misuse, or other types of fraud, compromise, or any other matter related to certificates.&quot;, 
&quot;&quot;)</defaultValue>
        <inlineHelpText>Email address or URL for reporting suspected Private Key Compromise, Certificate misuse, or other types of fraud, compromise, misuse, inappropriate conduct, or any other matter related to Certificates.</inlineHelpText>
        <label>Problem Reporting Mechanism</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Close_without_Sync__c</fullName>
        <label>Reason for Close without Sync</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recognized_CAA_Domains__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: Domain names that the CA recognizes in Certification Authority Authorization (CAA) \&quot;issue\&quot; and \&quot;issuewild\&quot; records as permitting it to issue. Comma-separated list.&quot;, 
&quot;&quot;)</defaultValue>
        <inlineHelpText>Certification Authority Authorization (CAA) domain names recognized in a CAA record&apos;s issue and issuewild property tags. Comma-separated list.</inlineHelpText>
        <label>Recognized CAA Domains</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>Information verification phases</inlineHelpText>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Request Received</fullName>
                    <default>true</default>
                    <label>Initial Request Received</label>
                </value>
                <value>
                    <fullName>Information Verification In Process</fullName>
                </value>
                <value>
                    <fullName>In Detailed CP/CPS Review</fullName>
                </value>
                <value>
                    <fullName>In Public Discussion</fullName>
                </value>
                <value>
                    <fullName>Discussion on Hold</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved, Pending Inclusion</fullName>
                </value>
                <value>
                    <fullName>Approved, Pending Inclusion and EV</fullName>
                </value>
                <value>
                    <fullName>Included, Pending EV</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Request Withdrawn by CA</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Closed - CA Unresponsive</fullName>
                </value>
                <value>
                    <fullName>CA Action Items from Discussion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Practices_Verified__c</fullName>
        <label>Required Practices Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Practices__c</fullName>
        <defaultValue>&apos;https://wiki.mozilla.org/CA/Required_or_Recommended_Practices&apos;</defaultValue>
        <label>Required Practices</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_ALV_Comments__c</fullName>
        <inlineHelpText>Explanation about why audit accepted when ALV status is FAIL </inlineHelpText>
        <label>Standard Audit ALV Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Authenticity_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only when authenticity of audit statement has been confirmed </inlineHelpText>
        <label>Standard Audit Authenticity Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Auto_Review_Results__c</fullName>
        <inlineHelpText>Results returned by ALV service</inlineHelpText>
        <label>Standard Audit ALV Results</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Auto_Review_Status__c</fullName>
        <inlineHelpText>Status returned by ALV service</inlineHelpText>
        <label>Standard Audit ALV Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Gap_For_All_Root_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rollup field for all Root Cases related to the Case (updated by trigger)</inlineHelpText>
        <label>Standard Audit Gap For All Root Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Period_End_Date__c</fullName>
        <inlineHelpText>End date of the period of time of CA operations examined by the auditor. Audit Periods must not exceed one year in duration and must be contiguous.</inlineHelpText>
        <label>Standard Audit Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Period_Start_Date__c</fullName>
        <inlineHelpText>Start date of the period of time of CA operations examined by the auditor.</inlineHelpText>
        <label>Standard Audit Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Seal_ID__c</fullName>
        <inlineHelpText>Store Seal ID to map the Report ID in CPACanada Files object</inlineHelpText>
        <label>Standard Audit Seal ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Statement_Date__c</fullName>
        <description>Date Audit Statement Issued</description>
        <inlineHelpText>Date Audit Statement Issued</inlineHelpText>
        <label>Standard Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Statement_Dt__c</fullName>
        <formula>IF ( NOT ISBLANK(Standard_Audit_Statement_Date__c), 

TEXT(YEAR(Standard_Audit_Statement_Date__c)) &amp; &quot;.&quot; &amp;

IF (LEN(TEXT(MONTH(Standard_Audit_Statement_Date__c))) = 1,&quot;0&quot; &amp; TEXT(MONTH(Standard_Audit_Statement_Date__c)),TEXT(MONTH(Standard_Audit_Statement_Date__c))) 
&amp; &quot;.&quot; &amp;

IF (LEN(TEXT(DAY(Standard_Audit_Statement_Date__c))) = 1,&quot;0&quot; &amp; TEXT(DAY(Standard_Audit_Statement_Date__c)),TEXT(DAY(Standard_Audit_Statement_Date__c))),

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Audit Statement Dt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Statement_Link__c</fullName>
        <description>URL to public attestation of conformance to the stated certificate verification requirements by a competent independent party. Documents may be attached to Bugzilla Bugs as described here https://www.ccadb.org/cas/fields#uploading-documents.</description>
        <inlineHelpText>URL to public attestation of conformance to the stated certificate verification requirements by a competent independent party. Documents may be attached to Bugzilla Bugs as described here https://www.ccadb.org/cas/fields#uploading-documents.</inlineHelpText>
        <label>Standard Audit Statement (Link)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Type__c</fullName>
        <label>Standard Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WebTrust</fullName>
                </value>
                <value>
                    <fullName>ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>ETSI TS 101 456</fullName>
                </value>
                <value>
                    <fullName>ETSI TS 102 042</fullName>
                </value>
                <value>
                    <fullName>Equivalent WebTrust</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI 101 456</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI 102 042</fullName>
                </value>
                <value>
                    <fullName>WebTrust Equivalent</fullName>
                    <isActive>false</isActive>
                    <label>WebTrust Equivalent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Audit_Verified__c</fullName>
        <inlineHelpText>Root Store Manager to verify data fields in Auditor and Standard Audit sections</inlineHelpText>
        <label>Standard Audit Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Deviation_Comments__c</fullName>
        <label>Standard Audit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Issues or qualifications noted in audit statement</description>
        <inlineHelpText>Issues or qualifications noted in audit statement</inlineHelpText>
        <label>Standard Audit Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Summary__c</fullName>
        <formula>&quot;Mozilla = &quot; + Text(Request_Status__c) + &quot;; Microsoft = &quot; + Text(Microsoft_Request_Status__c) + &quot;;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Warning_For_BR_Audit_Statement_Date__c</fullName>
        <formula>IF (OR(RecordType.Name = &quot;CA Audit Update Request&quot;,RecordType.Name = &quot;CA Root Inclusion Request&quot;),
    IF(BR_Audit_Statement_Date__c - BR_Audit_Period_End_Date__c &gt; 93, 
        (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Statement Dt &gt; 93 days after the Period End Dt&quot; + BR()),&quot;&quot;)+&quot; &quot;+ 
    IF(BR_Audit_Period_End_Date__c - BR_Audit_Period_Start_Date__c &lt;= 30, 
        (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Point-in-Time Audit&quot; + BR()),&quot;&quot;)+&quot; &quot; +
    IF(BR_Audit_Period_End_Date__c - BR_Audit_Period_Start_Date__c &gt; 366, 
        (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Audit period longer than a year&quot; + BR()),&quot;&quot;)+&quot; &quot; +
     IF(BR_Audit_Gap_For_All_Root_Cases__c,(IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20)+&quot; Audit Gap&quot;),&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display warnings for ...
&quot;Statement Dt &gt; 93 days after the Period End Dt&quot;,
&quot;Audit period longer than a year&quot;, 
&quot;Point-in-Time Audit&quot;,
&quot;Audit Gap&quot;</inlineHelpText>
        <label>Warning</label>
        <type>Text</type>
    </fields>
</CustomObject>